--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+/*
 .home{
     font-family: "Roboto", "Helvetica Neue", sans-serif; 
-    /* height: 72px;  */
-}
+     height: 72px;  
 
+}*/
 
    
