--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="home">
+<div>
   <app-navbar></app-navbar>
 
   <div class="container-fluid" >
@@ -6,4 +6,4 @@
   </div>
 
   <app-footer></app-footer>
-</div>
+</div> 
