--- a/src/app/Components/group/group.component.html
+++ b/src/app/Components/group/group.component.html
@@ -4,13 +4,13 @@
      <div class="row">
       <div class="group-details">
        <div class="all-link d-flex">
-          <div class="left col-xl-6 col-lg-12">
+          <div class="left col-xl-6 col-md-6 ">
             <button class="link overview btn" (click)="showMyGroups()" [class.active]="currentTab === 'myGroups'"> My  Groups </button>
-            <button class="link problem btn" (click)="showExploreGroups()"
-              [class.active]="currentTab === 'exploreGroups'"> Explore </button>
+            <button class="link problem btn" (click)="showExploreGroups()" [class.active]="currentTab === 'exploreGroups'"> Explore </button>
           </div>
-          <div class="right d-flex btn-group ">
-            <button type="submit" class="btn ms-2 mb-0 border-none shadow-none " data-bs-toggle="modal"
+          
+          <div class="right col-xl-6 col-md-6 btn-primary btn-sm">
+            <button type="submit" class="btn mb-0 border-none shadow-none " data-bs-toggle="modal"
               data-bs-target="#exampleModal2" value="Create Contest" style="background-color: #0275d8; color: #fff; ">
               Create Group</button>
             <app-create-group></app-create-group>
