--- a/src/app/Components/groups/groups.component.html
+++ b/src/app/Components/groups/groups.component.html
@@ -1,12 +1,10 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="all d-flex col-xl-4 col-lg-6 col-sm-6" *ngFor="let group of groups">
+    <div class="all d-flex col-xl-4 col-md-6  col-sm-12" *ngFor="let group of groups">
       <div class="card" style="height: fit-content;">
-        <div class="card-header bg-custom "style="padding: unset !important;">
-         <a href="/group" class="name col-xl-8 col-sm-6 ps-3 mt-3" >{{ group.name }}</a>
-          <p [ngClass]="{'user-role-leader': group.userGroupRole === 'LEADER', 'user-role-manager': group.userGroupRole === 'MANAGER', 'user-role-member': group.userGroupRole === 'MEMBER'}"
-            class="tag text-center col-xl-4 col-sm-6 mt-3"> {{ group.userGroupRole }}
-          </p>
+        <div class="card-header bg-custom d-flex "style="padding-left: unset !important;">
+          <a href="/group" class="name col-xl-8 col-sm-8 ps-3 pt-1 justify-content-center"  >{{ group.name }}</a>
+          <p [ngClass]="{'user-role-leader': group.userGroupRole === 'LEADER', 'user-role-manager': group.userGroupRole === 'MANAGER', 'user-role-member': group.userGroupRole === 'MEMBER'}" class="tag text-center col-xl-4 col-sm-4 "> {{ group.userGroupRole }} </p>
         </div>
         <div class="card-body" style="padding: unset !important;">
           <h5 class="card-title ps-3" style="padding-top: 2vh; ">{{ group.description }}</h5>
