--- a/src/app/Components/create-group/create-group.component.html
+++ b/src/app/Components/create-group/create-group.component.html
@@ -1,10 +1,7 @@
-<div class="modal fade modal-lg mt-5 center" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
+<!-- <div class="modal fade modal-lg mt-5 center" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModal2Label">Create Group </h5>
-                <button type="button" class="btn-close ps-0 pe-3 border-none shadow-none" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
+            
             <div class="modal-body">
                 <form (ngSubmit)="handleSubmitGroup()" [formGroup]="createGroupForm">
                     <div class="mt-3 mb-3 d-flex">
@@ -39,4 +36,59 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<mat-dialog-content>
+    <div class="dialog-container">
+        <h2 class="dialog-title">Create Group </h2>
+        <form [formGroup]="createGroupForm">
+            <div class="row" id="open-row" class="">
+                
+            </div>
+
+            <div class="mt-3 mb-3 d-flex">
+                <label for="name" class="col-md-2 mt-2 me-3">Name</label>
+                <input type="text" required class="form-control" placeholder="Name"
+                    formControlName="title" />
+                <div *ngIf="createGroupForm.get('name')?.errors && createGroupForm.get('name')?.touched ">
+                    <span *ngIf="createGroupForm.get('name')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>
+
+            <div class="mt-3 mb-3 d-flex">
+                <label for="description" class="col-md-2 mt-2 me-3">Description</label>
+                <input type="text" required id="" class="form-control" placeholder="description"
+                    formControlName="description" />
+                <div *ngIf="createGroupForm.get('description')?.errors && createGroupForm.get('description')?.touched ">
+                    <span *ngIf="createGroupForm.get('description')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>            
+            
+            <div  class="mt-3 mb-3 d-flex">
+                <label for="visibility" class="col-md-2 me-3 mt-4">Group</label>
+                <select  class="form-select mt-3" formControlName="visibility">
+                    <option value="PUBLIC" selected>Public</option>
+                    <option value="PRIVATE">Private</option>
+                 </select>
+                 <div *ngIf="createGroupForm.get('visibility')?.errors && createGroupForm.get('visibility')?.touched ">
+                    <span *ngIf="createGroupForm.get('visibility')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>
+        </form>
+    </div>
+</mat-dialog-content>
+
+<mat-dialog-actions class="dialog-actions">
+    <div class="dialog-actions" style="display: flex; justify-content: flex-end; align-items: flex-end; width: 100%;">
+        <button type="button" class="btn btn-outline-danger me-3" mat-dialog-close>Cancel</button>
+        <button type="submit" class="btn btn-primary" (click)="handleCreateGroup()">
+            <span *ngIf="isLoading"><i class="fa fa-spinner fa-spin"></i> Creating</span>
+            <span *ngIf="!isLoading"> Create</span></button>
+    </div>
+</mat-dialog-actions>
