--- a/src/app/Components/status/status.component.html
+++ b/src/app/Components/status/status.component.html
@@ -38,7 +38,8 @@
                             <select [(ngModel)]="oj" id="OJ_s_Id" name="OJ_s_Id" class="search_text" style="width:100%"
                                 (change)="filterSubmissions()">
                                 <option value="">All</option>
-                                <option *ngFor="let onlineJudge of onlineJudges" [value]="onlineJudge">{{onlineJudge}}</option>
+                                <option *ngFor="let onlineJudge of onlineJudges" [value]="onlineJudge">{{onlineJudge}}
+                                </option>
                             </select>
                         </th>
                         <th class="title">
@@ -72,7 +73,7 @@
                         <td> <a href="problem/{{submission.ojType}}/{{submission.problemCode}}">{{
                                 submission.problemCode }}</a> </td>
                         <td>
-                            <button (click)="showSubmissionResult(i)"
+                            <button (click)="showSubmissionResult(submission.id)"
                                 style="background: none; border: none; cursor: pointer;"
                                 [style.color]="submission.verdict === 'Accepted' ? '#5cb85c' : 'red'"
                                 [style.font-weight]="submission.verdict === 'Accepted' ? 'bold' : ''">
