--- a/src/app/Components/status/status.component.html
+++ b/src/app/Components/status/status.component.html
@@ -73,7 +73,7 @@
                         <td> <a href="problem/{{submission.ojType}}/{{submission.problemCode}}">{{
                                 submission.problemCode }}</a> </td>
                         <td>
-                            <button (click)="showSubmissionResult(submission.id)"
+                            <button (click)="showSubmissionResult(i)"
                                 style="background: none; border: none; cursor: pointer;"
                                 [style.color]="submission.verdict === 'Accepted' ? '#5cb85c' : 'red'"
                                 [style.font-weight]="submission.verdict === 'Accepted' ? 'bold' : ''">
