if it work...don't touch it

--- a/src/app/Components/explore-groups/explore-groups.component.html
+++ b/src/app/Components/explore-groups/explore-groups.component.html
@@ -6,7 +6,7 @@
     <!-- <label class="form-label" for="form1">Search</label> -->
   
  </div>
-  <button type="button" class="btn btn-primary shadow-none" (click)="searchGroups()" data-mdb-ripple-init>
+  <button type="button" class="btn btn-primary shadow-none" (click)="searchGroups()" >
     <i class="fas fa-search"></i>
   </button>
 </div>
