--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -4,22 +4,20 @@
 
             <div id="prob-operation" class="row ">
                 <div class=" mt-5 w-100">
-                    <div class=" text-center w-100 " >
-                     
-                        <div class="col-xs-6 col-sm-12 d-flex"  [class.d-none]="showButtons == false">
-                           <app-problem-selector-hashtag></app-problem-selector-hashtag>
-                          </div>
-                          
-                    </div>    
+                    <!-- <div class=" text-center w-100 ">
+                        <div class="col-xs-6 col-sm-12 d-flex" [class.d-none]="showButtons == false">
+                            <app-problem-selector-hashtag></app-problem-selector-hashtag>
+                        </div>
+                    </div> -->
                     <div class="col-xs-8">
                         <button (click)="openModal()" type="button" class="btn btn-success">
                             <i class="fa fa-check"></i> Submit </button>
                     </div>
                 </div>
 
-           
-             <!-- contest problem --> 
-                <div class=" text-center w-100 "  [class.d-none]="showButtons == false">
+
+                <!-- contest problem -->
+                <!-- <div class=" text-center w-100 "  [class.d-none]="showButtons == false">
                     <div class=" col-xs-6 col-sm-12" >
                         <button type="button" class="btn btn-secondary" > <i class="fa fa-list-ul "></i>Status </button>
                     </div>
@@ -27,10 +25,10 @@
                         <button type="button" class="btn btn-secondary"> <i class="fa fa-list-ol "></i>My Status
                         </button>
                     </div>
-                </div>
+                </div> -->
 
                 <div class=" text-center ">
-                    <div class="w-100" [class.d-none]="showButtons == true">
+                    <div class="w-100">
                         <div class="col-xs-8">
                             <button class="recrawl btn btn-secondary " (click)="recrawl()">
                                 <i class="fa fa-refresh me-1"></i>Recrawl</button>
@@ -42,8 +40,10 @@
             <div id="prob-properties" class="ms-0 w-100">
                 <div class="card w-100">
                     <div class="d-flex small-text" *ngFor="let property of problemInfo.properties">
-                        <dt class="col-sm-6">{{property.title}}</dt>
-                        <dd class="col-sm-6">{{property.content}}</dd>
+                        <ng-container *ngIf="inContest || !property.spoiler">
+                            <dt class="col-sm-6">{{property.title}}</dt>
+                            <dd class="col-sm-6">{{property.content}}</dd>
+                        </ng-container>
                     </div>
                 </div>
             </div>
@@ -92,17 +92,20 @@
             <div class="d-flex mt-5 ">
                 <h2 class="text-bold"
                     style="font-family: Arial, sans-serif; font-size: 24px; font-weight: bold; line-height: 1.5; color: #333;">
-                    <i class="fas fa-star"></i>{{problemInfo.title}}</h2>
-                <p class="mt-2 ms-2"
+                    <ng-container *ngIf="inContest">{{problemInfo.problemHashtag}} - </ng-container> {{problemInfo.title}}
+
+                </h2>
+                <p *ngIf="!inContest" class="mt-2 ms-2"
                     style="font-family: Arial, sans-serif; font-size: 18px; line-height: 1.5; color: #666;">
-                    <a [href]="problemInfo.problemLink" [class.d-none]="showButtons == true" target="_blank"
+                    <a [href]="problemInfo.problemLink" target="_blank"
                         style="color: #007bff;">{{problemInfo.onlineJudge}} - {{problemInfo.code}}
                         <i class="fa fa-external-link"></i>
                     </a>
                 </p>
             </div>
             <div class="row" style="border-radius: 10px;">
-                <iframe #myIframe class="w-full h-full" id="prob-statement" [src]="descriptionUrl" scrolling="no" style="width: 100%; height: 5000px;"></iframe>
+                <iframe #myIframe class="w-full h-full" id="prob-statement" [src]="descriptionUrl" scrolling="no"
+                    style="width: 100%; height: 5000px;"></iframe>
             </div>
         </div>
     </div>
