--- a/src/app/Components/group/group.component.html
+++ b/src/app/Components/group/group.component.html
@@ -1,14 +1,17 @@
-
 <div class="container pt-4">
   <div class="card p-4">
-     <div class="row">
+    <div class="row">
       <div class="group-details">
-       <div class="all-link d-flex">
+        <div class="all-link d-flex">
           <div class="left col-xl-6 col-md-6 ">
-            <button class="link overview btn" (click)="showMyGroups()" [class.active]="currentTab === 'myGroups'"> My  Groups </button>
-            <button class="link problem btn" (click)="showExploreGroups()" [class.active]="currentTab === 'exploreGroups'"> Explore </button>
+            <button class="link overview btn" (click)="showMyGroups()" [class.active]="currentTab === 'myGroups'"> My
+              Groups </button>
+            <button class="link problem btn" (click)="showExploreGroups()"
+              [class.active]="currentTab === 'exploreGroups'"> Explore </button>
+            <button class="link problem btn" (click)="showInvitations()" [class.active]="currentTab === 'invitations'">
+              Invitations </button>
           </div>
-          
+
           <div class="right col-xl-6 col-md-6 btn-primary btn-sm">
             <button type="submit" class="btn mb-0 border-none shadow-none " data-bs-toggle="modal"
               data-bs-target="#exampleModal2" value="Create Contest" style="background-color: #0275d8; color: #fff; ">
@@ -24,8 +27,11 @@
         </div>
         <div *ngIf="currentTab === 'exploreGroups'">
           <app-explore-groups></app-explore-groups>
+        </div>
+        <div *ngIf="currentTab === 'invitations'">
+           TODO: Add Invitations Component
+        </div>
       </div>
-  </div>
     </div>
   </div>
 </div>
