--- a/src/app/Components/group-details/group-details.component.html
+++ b/src/app/Components/group-details/group-details.component.html
@@ -1,8 +1,87 @@
-<p>Group title</p>
-<p>Buttons component (do we really a component for it?)</p>
-<p>Description Component (Same as above)</p>
-<p>Sidebar Component</p>
-
-<app-group-contest-table/>
-
-<app-group-members-table/>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 col-md-3 col-lg-2 m-4 p-4 bg-white shadow-sm rounded">
+            <h5>{{group.name}}</h5>
+            <hr>
+            <div *ngIf="isMember">
+                <p><strong>My Name: </strong> {{group.memberHandle}}</p>
+                <hr>
+            </div>
+            <p><strong>Visibility: </strong> {{group.visibility}}</p>
+            <hr>
+            <p><strong>Leader: </strong> <a href="profile/{{group.leaderHandle}}">{{group.leaderHandle}}</a></p>
+            <hr>
+            <p><strong>Members: </strong> {{group.members}}</p>
+            <hr>
+            <p><strong>Create Time: </strong> {{group.creationDate | date}}</p>
+        </div>
+        <div class="col-12 col-md-8 col-lg-9 m-4">
+            <div
+                class="mb-2 d-flex flex-column flex-lg-row justify-content-between align-items-start align-items-lg-center">
+                <h3 class="mb-3 mb-lg-0">{{group.name}}</h3>
+                <div>
+                    <button *ngIf="isMember" class="btn btn-danger me-2 mb-2 mb-lg-0"
+                        (click)="leaveGroup()">Leave</button>
+                    <button *ngIf="!isMember" class="btn me-2 mb-2 mb-lg-0"
+                        style="background-color:#ffffff; color:black" (click)="joinGroup()">Join</button>
+                    <button *ngIf="isLeader" class="btn me-2 mb-2 mb-lg-0"
+                        style="background-color:#ffffff; color:black" (click)="openInviteUserDialog()">Invite</button>
+                    <button *ngIf="isLeader" class="btn me-2 mb-2 mb-lg-0"
+                        style="background-color:#ffffff; color:black">Update</button>
+                    <button *ngIf="isLeader" class="btn" style="background-color:#ffffff; color:black">Add
+                        Contest</button>
+                </div>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded">
+                <p>{{group.description}}</p>
+            </div>
+            <div *ngIf="contests.length > 0" class="bg-white p-4 mt-4 shadow-sm rounded">
+                <h3>Contests</h3>
+                <div class="table-responsive">
+                    <table id="listContest" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="title">Title</th>
+                                <th class="begin_time">Begin Time</th>
+                                <th class="length">Length</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let contest of contests">
+                                <td>
+                                    <a *ngIf="group.member; else showTitleOnly" href="/contest/{{contest.id}}">{{contest.title}}</a>
+                                    <ng-template #showTitleOnly>{{contest.title}}</ng-template>
+                                </td>
+                                <td>{{contest.beginTime * 1000 | date:'medium'}}</td>
+                                <td>{{contest.duration / 60 / 60 | hoursMinutes}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div *ngIf="members.length > 0" class="bg-white p-4 mt-4 shadow-sm rounded">
+                <h3>Members</h3>
+                <div class="table-responsive">
+                    <table id="listUser" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Role</th>
+                                <th>Nick Name</th>
+                                <th>Handle</th>
+                                <th>Join</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let user of members">
+                                <td>{{user.role}}</td>
+                                <td>{{user.name}}</td>
+                                <td>{{user.handle}}</td>
+                                <td>{{user.joinDate | date}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
