--- a/src/app/Components/explore-groups/explore-groups.component.html
+++ b/src/app/Components/explore-groups/explore-groups.component.html
@@ -1,13 +1,27 @@
-
-
-<div class="input-group mt-5 ms-4" >
+<div class="input-group mt-5 ms-4">
   <div class="form-outline" data-mdb-input-init>
-    <input type="search" id="form1" [(ngModel)]="searchText" class="form-control" placeholder="Search" style="box-shadow: none;"/>
-    <!-- <label class="form-label" for="form1">Search</label> -->
-  
- </div>
-  <button type="button" class="btn btn-primary shadow-none" (click)="searchGroups()" >
+    <input 
+      type="search" 
+      id="form1" 
+      [(ngModel)]="searchName" 
+      class="form-control" 
+      placeholder="Search" 
+      style="box-shadow: none;" 
+      (keyup.enter)="onSearch()"
+    />
+  </div>
+  <button type="button" class="btn btn-primary shadow-none" (click)="onSearch()">
     <i class="fas fa-search"></i>
   </button>
 </div>
-<app-groups [groups]="groups"></app-groups>
+
+<div *ngIf="loading" class="mt-4 ms-4">Loading...</div>
+
+<div *ngIf="!loading && groups.length > 0" class="mt-4 ms-4">
+  <app-groups [groups]="groups"></app-groups>
+  
+</div>
+
+<div *ngIf="!loading && groups.length === 0" class="mt-4 ms-4">
+  <p>No groups found</p>
+</div>
