chore: Update create-contest component to handle group contests
- Modify create-contest component to handle group contests
- Set isGroupSelected to true and pre-fill groupId when inGroup is true in create-contest component
- Update group-details component to open create-contest dialog with inGroup set to true and groupId passed as data

--- a/src/app/Components/group-details/group-details.component.html
+++ b/src/app/Components/group-details/group-details.component.html
@@ -27,8 +27,8 @@
                     <button *ngIf="isLeader" class="btn me-2 mb-2 mb-lg-0"
                         style="background-color:#ffffff; color:black" (click)="openInviteUserDialog()">Invite</button>
                     <button *ngIf="isLeader" class="btn me-2 mb-2 mb-lg-0"
-                        style="background-color:#ffffff; color:black">Update</button>
-                    <button *ngIf="isLeader" class="btn" style="background-color:#ffffff; color:black">Add
+                        style="background-color:#ffffff; color:black" (click)="UpdateGroup()">Update</button>
+                    <button *ngIf="isLeader" class="btn" style="background-color:#ffffff; color:black" (click)="addContest()">Add
                         Contest</button>
                 </div>
             </div>
