--- a/src/app/Components/create-contest/create-contest.component.html
+++ b/src/app/Components/create-contest/create-contest.component.html
@@ -49,7 +49,7 @@
                 <i></i>
             </div>
 
-            <div *ngIf="isGroupSelected" class="mt-3 mb-3 d-flex">
+            <div *ngIf="isGroupSelected && !isGroupSelectorDisabled" class="mt-3 mb-3 d-flex">
                 <label for="visibility" class="col-md-2 me-3 mt-4">Group</label>
                 <select *ngIf="userGroups.length >= 1" id="form3" class="form-select mt-3" formControlName="groupId">
                     <option value="0" selected>Select Group</option>
