--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -3,8 +3,16 @@
 		<div class="box col-md-6 col-lg-4">
 			<form (ngSubmit)="handleLogin()"[formGroup]="loginForm" class="form">
 				<h2>Sign In</h2>
-				<app-form-input [controller]="loginForm.controls.userHandle" [span]="'User Handle'"  ></app-form-input>
-				<app-form-input [controller]="loginForm.controls.userPassword" [span]="'Password'" [inputType]="'password'" ></app-form-input>   
+				<app-form-input [controller]="loginForm.controls.userHandle" [span]="'User Handle'"></app-form-input>
+				<div *ngIf="loginForm.controls.userHandle.errors?.['backend']" class="alert alert-danger">
+					{{ loginForm.controls.userHandle.errors?.['backend'] }}
+				</div>
+				<app-form-input [controller]="loginForm.controls.userPassword" [span]="'Password'" [inputType]="'password'"></app-form-input>   
+				<div *ngIf="loginForm.controls.userPassword.errors?.['backend']" class="alert alert-danger">
+					{{ loginForm.controls.userPassword.errors?.['backend'] }}
+				</div>
+					
+				
 				<button type="submit" [disabled]="loginForm.invalid" >
 					<i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
 					<span *ngIf="!isLoading">Login</span>
