--- a/src/app/Components/group-details/group-details.component.html
+++ b/src/app/Components/group-details/group-details.component.html
@@ -20,7 +20,7 @@
                 class="mb-2 d-flex flex-column flex-lg-row justify-content-between align-items-start align-items-lg-center">
                 <h3 class="mb-3 mb-lg-0">{{group.name}}</h3>
                 <div>
-                    <button *ngIf="isMember" class="btn btn-danger me-2 mb-2 mb-lg-0"
+                    <button *ngIf="isMember && !isLeader" class="btn btn-danger me-2 mb-2 mb-lg-0"
                         (click)="leaveGroup()">Leave</button>
                     <button *ngIf="!isMember" class="btn me-2 mb-2 mb-lg-0"
                         style="background-color:#ffffff; color:black" (click)="joinGroup()">Join</button>
