--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -67,7 +67,7 @@
                     <tbody>
                         <tr *ngFor="let submission of problemSumbissions; let i = index" class="my-sol">
                             <td>
-                                <button (click)="showSubmissionResult(i)"
+                                <button (click)="showSubmissionResult(submission.id)"
                                     style="background: none; border: none; cursor: pointer;"
                                     [style.color]="submission.verdict === 'Accepted' ? '#5cb85c' : 'red'"
                                     [style.font-weight]="submission.verdict === 'Accepted' ? 'bold' : ''">
