handle action of delete contest, update contest.

--- a/src/app/Components/contest-details/contest-details.component.html
+++ b/src/app/Components/contest-details/contest-details.component.html
@@ -67,7 +67,7 @@
                     </div>
                     <div *ngIf="isLeaderOrManager" class="right col-xl-4 col-lg-12 d-flex btn-group text-xs-right">
                         <button type="button" class="btn btn-secondary" mat-button (click)="openUpdateContestDialog()">Update</button>
-                        <button type="button" class="btn btn-secondary">Delete</button>
+                        <button type="button" class="btn btn-secondary" (click)="handleDeleteContest()">Delete</button>
                     </div>
                 </div>
 
