--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -16,8 +16,8 @@
               </p>
               <button *ngIf="!isLogin" class="register btn " routerLink="/register">Create Account <i
                   class="fa fa-angle-right" aria-hidden="true"></i></button>
-              <button *ngIf="isLogin" class="register btn" routerLink="/problem">All Problems <i
-                  class="fa fa-angle-right" aria-hidden="true"></i></button>
+              <!-- <button *ngIf="isLogin" class="btn" (click)="gotoProblemList()">All Problems <i
+                  class="fa fa-angle-right" aria-hidden="true"></i></button> -->
             </div>
           </div>
         </div>
