--- a/src/app/Components/overview/overview.component.html
+++ b/src/app/Components/overview/overview.component.html
@@ -21,7 +21,7 @@
                         <a [href]="problem.problemLink" target="_blank">{{ problem.source }} {{ problem.problemCode}}</a>
                     </td>
                     <td class="text-lg-start">
-                        <a routerLink="problem/{{problem.problemHashtag}}">{{ problem.problemAlias }}</a>
+                        <a target="_blank" routerLink="problem/{{problem.problemHashtag}}">{{ problem.problemAlias }}</a>
                     </td>
                 </tr>
             </tbody>
