fix: handle problem update - begin time

--- a/src/app/Components/update-contest/update-contest.component.html
+++ b/src/app/Components/update-contest/update-contest.component.html
@@ -2,7 +2,7 @@
     <div class="dialog-container">
         <h2 class="dialog-title">Update Contest</h2>
         <form [formGroup]="updateContestForm">
-            <div class="row" id="open-row" class="">
+            <!-- <div class="row" id="open-row" class="">
                 <div class="mt-3  d-flex">
                     <label class="col-md-2 form-label mt-2 " for="submit-open">Type</label>
                     <div class="btn-group ms-3 " role="group">
@@ -24,7 +24,7 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="mt-3 mb-3 d-flex">
                 <label for="title" class="col-md-2 mt-2 me-3">Title</label>
